--- a/Server/package.json
+++ b/Server/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3"
