--- a/Client/package.json
+++ b/Client/package.json
@@ -15,12 +15,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "dotenv": "^16.0.0",
     "firebase": "9.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flag-icon-css": "^1.0.25",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "styled-system": "^5.1.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -47,5 +50,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-system": "^5.1.15",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.0",
+    "postcss": "^8.4.8"
   }
 }
