--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "firebase": "9.6.5",
     "react": "^17.0.2",
